# High-Frequency-Snake-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: README.md  bench.md  game_bench.rs  integrated_bench.rs  perf_counters_bench.rs  perf_summary.py  run_bench.sh  spsc_bench.rs
perf/: README.md  measure_cache.sh  measure_pipeline.sh  perf_all_summary.py
src/: game.rs  lib.rs  main.rs  tests.rs
src/game/: apple.rs  engine.rs  engine_backup.rs  engine_fixed.rs  engine_optimized.rs  generator.rs  grid.rs  optimisations.md  snake.rs  types.rs
src/ipc/: spsc.rs
