[package]
name = "high-frequency-snake"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8.3"
crossbeam-utils = "0.8.21"
rand = "0.9.2"
perf-event-open = "0.4.0"
lazy_static = "1.4.0"
tinydeque = { path = "./tinydeque", features = ["alloc"] }

[dev-dependencies]
criterion = "0.7.0"

[features]
profile = []

[profile.profile]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "spsc_bench"
harness = false

[[bench]]
name = "game_bench"
harness = false

[[bench]]
name = "integrated_bench"
harness = false

[[bench]]
name = "perf_counters_bench"
harness = false


